--- a/app/src/main/res/layout/item_currency.xml
+++ b/app/src/main/res/layout/item_currency.xml
@@ -2,21 +2,24 @@
 <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_margin="8dp"
-        android:elevation="5dp">
+        android:layout_height="120dp"
+        android:layout_margin="6dp">
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
         <TextView
                 android:id="@+id/text_name_ccy"
-                android:layout_width="56dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="Name"
+                android:layout_marginTop="8dp"
+                android:text="@string/text_ccy"
+                app:layout_constraintEnd_toStartOf="@+id/text_ccy"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
@@ -25,11 +28,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="USD"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/text_name_ccy"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="USD"/>
 
         <TextView
                 android:id="@+id/text_base_name_ccy"
@@ -37,7 +39,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="UAH"
+                android:text="@string/text_base_ccy"
+                app:layout_constraintEnd_toStartOf="@+id/text_base_ccy"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_name_ccy"/>
 
@@ -47,11 +51,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
-                android:text="UAH"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/text_base_name_ccy"
-                app:layout_constraintTop_toBottomOf="@+id/text_ccy"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_ccy"
+                tools:text="UAH"/>
 
         <TextView
                 android:id="@+id/text_name_buy"
@@ -59,7 +61,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="text_name_buy"
+                android:text="@string/text_buy"
+                app:layout_constraintEnd_toStartOf="@+id/text_buy"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_base_name_ccy"/>
 
@@ -68,13 +72,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="text_buy"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/text_name_buy"
-                app:layout_constraintTop_toBottomOf="@+id/text_base_ccy"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_base_ccy"
+                tools:text="0.2"/>
 
         <TextView
                 android:id="@+id/text_name_sell"
@@ -82,7 +83,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="text_name_sell"
+                android:text="@string/text_sale"
+                app:layout_constraintEnd_toStartOf="@+id/text_sell"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/text_name_buy"/>
 
@@ -91,13 +94,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="text_sell"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/text_name_sell"
-                app:layout_constraintTop_toBottomOf="@+id/text_buy"/>
+                app:layout_constraintTop_toBottomOf="@+id/text_buy"
+                tools:text="0.1"/>
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
 
